# optisentry_final

./: CHANGES.txt  DEPLOYMENT.md  LICENSE  README.md  README_LAUNCH_MERGED.md  render_min.yaml
.github/workflows/: ci.yml  pages.yml
cmp/: cmp.json  snippet.html
services/api/: .env.example  Dockerfile  GO-LIVE.md  Makefile  README.md  README_PATCH.md  alembic.ini  docker-compose.yml  migrate.ps1  pyproject.toml  requirements.append.txt  requirements.txt  run.ps1
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_init.py  20250808_175734_initial.py
services/api/cli/optisentry_cli/: main.py
services/api/docs/ops/: db_migrations.md
services/api/docs/trust-center/: compliance.md  data-residency.md  privacy.md  security.md
services/api/optisentry/apps/api/: main.py
services/api/optisentry/apps/api/routes/: alerts.py  auth.py  billing.py  connectors.py  experiments.py  feature_flags.py  ml.py  public_docs.py  reports.py  statuspage.py  trust_center.py
services/api/optisentry/core/billing/: entitlements.py  idempotency.py
services/api/optisentry/core/db/: __init__.py  models.py
services/api/optisentry/core/reports/templates/: audit_report.html.j2
services/api/optisentry/core/security/: tokens.py
services/api/optisentry/core/usage/: metering.py
services/api/optisentry/experiments/: service.py
services/api/scripts/db/: seed.py
services/api/sdk/python/optisentry_sdk/: __init__.py  client.py
services/api/statuspage/: config.json
services/api/web/landing/: index.html
services/api/web/ui/: index.html
supabase/: config.toml
(+88 files in other folders)
