[project]
name = "optisentry"
version = "1.0.0"
description = "OptiSentry – monetizable SaaS skeleton (FastAPI) with Billing, Entitlements, Experiments, ML metrics, Alerts, Compliance."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "httpx>=0.27",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
optisentry = "cli.optisentry_cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["optisentry*", "cli*"]
